src/Calculator/LCalc/LambdaCalculus/Par.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.4.1).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module LCalc.LambdaCalculus.Par
  ( happyError
  , myLexer
  , pProgram
  , pTerm
  , pListTerm
  , pPattern
  , pScopedTerm
  , pVarIdent
  ) where

import Prelude

import qualified LCalc.LambdaCalculus.Abs
import LCalc.LambdaCalculus.Lex

}

%name pProgram Program
%name pTerm Term
%name pListTerm ListTerm
%name pPattern Pattern
%name pScopedTerm ScopedTerm
%name pVarIdent VarIdent
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '('     { PT _ (TS _ 1) }
  ')'     { PT _ (TS _ 2) }
  ';'     { PT _ (TS _ 3) }
  '='     { PT _ (TS _ 4) }
  '=>'    { PT _ (TS _ 5) }
  'fn'    { PT _ (TS _ 6) }
  'in'    { PT _ (TS _ 7) }
  'let'   { PT _ (TS _ 8) }
  L_Ident { PT _ (TV $$)  }

%%

Ident :: { LCalc.LambdaCalculus.Abs.Ident }
Ident  : L_Ident { LCalc.LambdaCalculus.Abs.Ident $1 }

Program :: { LCalc.LambdaCalculus.Abs.Program }
Program : ListTerm { LCalc.LambdaCalculus.Abs.AProgram $1 }

Term :: { LCalc.LambdaCalculus.Abs.Term }
Term
  : VarIdent { LCalc.LambdaCalculus.Abs.Var $1 }
  | '(' Term Term ')' { LCalc.LambdaCalculus.Abs.Application $2 $3 }
  | 'fn' Pattern '=>' ScopedTerm { LCalc.LambdaCalculus.Abs.Lam $2 $4 }
  | 'let' Pattern '=' Term 'in' ScopedTerm { LCalc.LambdaCalculus.Abs.Let $2 $4 $6 }
  | '(' Term ')' { $2 }

ListTerm :: { [LCalc.LambdaCalculus.Abs.Term] }
ListTerm
  : {- empty -} { [] }
  | Term { (:[]) $1 }
  | Term ';' ListTerm { (:) $1 $3 }

Pattern :: { LCalc.LambdaCalculus.Abs.Pattern }
Pattern : VarIdent { LCalc.LambdaCalculus.Abs.PatternVar $1 }

ScopedTerm :: { LCalc.LambdaCalculus.Abs.ScopedTerm }
ScopedTerm : Term { LCalc.LambdaCalculus.Abs.ScopedTerm $1 }

VarIdent :: { LCalc.LambdaCalculus.Abs.VarIdent }
VarIdent : Ident { LCalc.LambdaCalculus.Abs.VarIdent $1 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
